Removed .env again

--- a/locales/bn/about.json
+++ b/locales/bn/about.json
@@ -1,21 +1,23 @@
 {
-  "about": {
-    "backToHome": "ফিরে যান",
-    "meta": {
-      "title": "ভানিভিস্তা সম্পর্কে - ভাষা সেতুবন্ধন, সংস্কৃতি সংযোগ",
-      "description": "ভানিভিস্তা হল ভারতের আঞ্চলিক এবং সরকারি ভাষায় টেক্সট, অডিও এবং ভিডিও সামগ্রীর নির্বিঘ্ন অনুবাদের জন্য একটি প্ল্যাটফর্ম।"
+  
+    "AboutPage": {
+      "pageTitle": "ভানিভিস্তা সম্পর্কে - ভাষা সেতুবন্ধন, সংস্কৃতি সংযোগ",
+      "pageDescription": "ভানিভিস্তা হল ভারতের আঞ্চলিক এবং সরকারি ভাষায় টেক্সট, অডিও এবং ভিডিও সামগ্রীর নির্বিঘ্ন অনুবাদের জন্য একটি প্ল্যাটফর্ম।"
     },
-    "hero": {
+    "HeroSection": {
       "logoAlt": "ভানিভিস্তা লোগো",
       "title": "ভানিভিস্তা",
       "subtitle": "ভাষা সেতুবন্ধন, সংস্কৃতি সংযোগ"
     },
-    "mission": {
+    "Navigation": {
+      "backToHome": "ফিরে যান"
+    },
+    "MissionStatement": {
       "title": "আমাদের লক্ষ্য",
       "paragraph1": "ভানিভিস্তায়, আমরা এমন একটি বিশ্বের দৃষ্টি দ্বারা চালিত যেখানে ভাষা আর বোঝাপড়া এবং সংযোগের বাধা নয়। ভারতের ভাষা এবং সংস্কৃতির বৈচিত্র্যময় ক্যানভাসে, আমরা বিভাজন নয়, সুযোগ দেখি - ব্যবধান দূর করার, বোঝাপড়া বাড়ানোর এবং আমাদের সমৃদ্ধ ভাষাগত ঐতিহ্য উদযাপন করার সুযোগ।",
       "paragraph2": "আমাদের লক্ষ্য হল প্রযুক্তির শক্তি ব্যবহার করে তথ্য এবং বিনোদনকে প্রতিটি ভারতীয়ের কাছে অ্যাক্সেসযোগ্য করে তোলা, তারা যে ভাষাই বলুক না কেন। আমরা বিশ্বাস করি যে ভাষাগত বাধা দূর করে, আমরা আমাদের জাতির বৈচিত্র্যের পূর্ণ সম্ভাবনা উন্মুক্ত করতে পারি।"
     },
-    "services": {
+    "Services": {
       "title": "আমাদের সেবাসমূহ",
       "textTranslation": {
         "title": "টেক্সট অনুবাদ",
@@ -42,7 +44,7 @@
         "description": "ব্যবসায়িক মিটিং, সাংস্কৃতিক অনুষ্ঠানের জন্য লাইভ যোগাযোগ সক্ষম করুন।"
       }
     },
-    "impact": {
+    "Impact": {
       "title": "আমাদের প্রভাব",
       "items": [
         "২২টি সরকারি ভারতীয় ভাষায় ১ মিলিয়নেরও বেশি নথি অনুবাদ।",
@@ -52,18 +54,17 @@
         "১০০+ এনজিওর সাথে স্বাস্থ্যসেবা যোগাযোগ উন্নত করতে সহযোগিতা।"
       ]
     },
-    "cta": {
+    "CallToAction": {
       "title": "ভাষা বিপ্লবে যোগ দিন",
       "description": "ভাষার মাধ্যমে ভারতকে সংযুক্ত করার আমাদের মিশনের অংশ হোন।"
     },
-    "footer": {
+    "Footer": {
       "helpCenter": "সহায়তা কেন্দ্র",
       "contactSupport": "যোগাযোগ সমর্থন",
       "productUpdates": "পণ্য আপডেট",
       "pricing": "মূল্য",
       "copyright": "©২০২৪, সর্বস্বত্ব সংরক্ষিত।"
-    }
-  },
+    },
   "Common": {
     "brandName": "ভানিভিস্টা",
     "brandSlogan": "অনুবাদ • সংযোগ",
