--- a/locales/mr/about.json
+++ b/locales/mr/about.json
@@ -1,17 +1,22 @@
 {
-  "about": {
-    "backToHome": "परत फिरा",
-    "hero": {
+    "AboutPage": {
+      "pageTitle": "वाणी विस्ता - आमच्याबद्दल",
+      "pageDescription": "वाणी विस्ता बद्दल अधिक जाणून घ्या - भाषा जोडणे, संस्कृती जोडणे"
+    },
+    "Navigation": {
+      "backToHome": "परत फिरा"
+    },
+    "HeroSection": {
       "logoAlt": "वाणी विस्ता लोगो",
       "title": "वाणी विस्ता",
       "subtitle": "भाषा जोडणे, संस्कृती जोडणे"
     },
-    "mission": {
+    "MissionStatement": {
       "title": "आमचे ध्येय",
       "paragraph1": "वाणी विस्ता येथे, आम्ही भाषेच्या अडथळ्यांना दूर करण्यासाठी आणि जागतिक संवादाला प्रोत्साहन देण्यासाठी समर्पित आहोत.",
       "paragraph2": "नवीन भाषांतर सेवांद्वारे, आम्ही व्यक्ती आणि समुदायांना एकमेकांशी जोडण्यास, सामायिक करण्यास आणि एकमेकांना चांगल्या प्रकारे समजून घेण्यास सक्षम करतो."
     },
-    "services": {
+    "Services": {
       "title": "आमच्या सेवा",
       "textTranslation": {
         "title": "मजकूर भाषांतर",
@@ -38,7 +43,7 @@
         "description": "लाइव्ह संवादासाठी तात्काळ भाषांतर सेवा."
       }
     },
-    "impact": {
+    "Impact": {
       "title": "आमचा प्रभाव",
       "items": [
         "भाषेच्या अडथळ्यांवर मात करून 10 लाखांहून अधिक लोकांना जोडले",
@@ -47,18 +52,17 @@
         "50+ भाषांमध्ये शैक्षणिक संसाधने प्रदान केली"
       ]
     },
-    "cta": {
+    "CallToAction": {
       "title": "आमच्या समुदायात सामील व्हा",
       "description": "अधिक जोडलेला जग तयार करण्याच्या आमच्या मिशनचा भाग व्हा."
     },
-    "footer": {
+    "Footer": {
       "helpCenter": "मदत केंद्र",
       "contactSupport": "संपर्क समर्थन",
       "productUpdates": "प्रॉडक्ट अपडेट्स",
       "pricing": "किंमत",
       "copyright": "© 2024 वाणी विस्ता. सर्व हक्क राखीव."
-    }
-  },
+    },
   "Common": {
     "brandName": "वाणीविस्ता",
     "brandSlogan": "अनुवाद • जोडा",
